Prevent the event types table from overflowing due to the categories

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -450,6 +450,11 @@ body {
 	font-size: 90%;
 }
 
+.wrapping {
+	word-wrap: break-word;
+	word-break: break-all;
+}
+
 .button {
     display: inline;
     color: #fff;
